https://github.com/tracim/tracim/issues/778, alignment of the login button and the Forgotten password feature

--- a/frontend/src/css/Login.styl
+++ b/frontend/src/css/Login.styl
@@ -52,13 +52,12 @@
       &:focus
         box-shadow shadow-all-side-green
     &__pwforgot
-      margin-top 3px
       cursor pointer
       font-size 13px
       &:hover::after
         position absolute
         top 20px
-        right 15px
+        left 15px
         border-bottom 1px solid darkGrey
         padding-bottom 2px
         content ' '
